--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -11,3 +11,6 @@ projects:
         codeGenTarget: typescript
         generatedFileName: src/API.ts
         docsFilePath: src/graphql
+extensions:
+  amplify:
+    version: 3
