--- a/amplify/backend/function/cryptokingdomdf5b6cb2PostConfirmation/src/package.json
+++ b/amplify/backend/function/cryptokingdomdf5b6cb2PostConfirmation/src/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "axios": "latest"
+    "axios": "latest",
+    "metro-config": "^0.66.2"
   }
 }
