--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -53,6 +53,11 @@
           ]
         }
       ]
+    },
+    "cryptoKindomDataFromExternalAPI": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   },
   "api": {
