--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
+    "react-number-format": "^4.7.3",
     "tailwind-react-native-classnames": "^1.4.2"
   },
   "devDependencies": {
